# Online-Batch-Selection

./: pyproject.toml
data/: __init__.py  pacs.py
methods/: SelectionMethod.py
methods/method_utils/: diagnostics_context.py  snapshots.py
notebooks/: pacs_test.ipynb
