[project]
name = "online-bs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "cvxpy>=1.7.2",
    "datasets>=4.8.5",
    "ema-pytorch>=0.7.7",
    "ftfy>=6.3.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "python-ternary>=1.0.8",
    "pyyaml>=6.0.2",
    "regex>=2025.7.33",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "umap-learn>=0.5.5",
    "wandb>=0.21.0",
    "wcwidth>=0.2.13",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }